--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/node": "18.11.12",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "bootstrap": "^5.2.3",
     "next": "13.0.6",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
   }
